--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </div>
                     
                     <div class="box">
-                        <img src="./image/nextjs.png" alt="NextJs image">
+                        <img src="./image/nextJs.png" alt="NextJs image">
                         <p>Next Js</p>
                     </div>
                     <div class="box">
