--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                             </div>
                             <div class="access">
                                 <a target="_blank" href="https://netflix-1cu3.onrender.com/"> <button>Live</button> </a>
-                                <a target="_blank" href="https://github.com/pamusai04/Netflix"><button>Github</button></a>
+                                <a target="_blank" href="https://github.com/pamusai04/Netflix-Clone"><button>Github</button></a>
                             </div>
                         </div>
                     </div>
